--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,11 @@
 <!--  This file is app/views/movies/index.html.erb -->
 <h2>All Movies</h2>
 
+<h2> test </h2>
+
 <%#  Part 2: Start here... %>
+
+
 
 <table class="table table-striped col-md-12" id="movies">
   <thead>
