--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -19,9 +19,9 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th>Movie Title</th>
+      <th id="title_header" class="hilite <%=@title_highlight%>"> <%= link_to 'Movie Title', movies_path({:title_clicked => true, :ratings => Hash[@ratings_to_show.map {|x| [x, 1]}] }) %> </th>
       <th>Rating</th>
-      <th>Release Date</th>
+      <th id="release_date_header" class="hilite <%=@date_highlight%>"  > <%= link_to 'Release Date', movies_path({:date_clicked => true, :ratings => Hash[@ratings_to_show.map {|x| [x, 1]}] }) %> </th>
       <th>More Info</th>
     </tr>
   </thead>
